fix : Stream 순서 지정